# monte-carlo-auto-callable-pricing-engine

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/analytics/: alloc_tracker.rs  mod.rs  profiling.rs  results.rs  svg_timeline.rs
src/concurrency/: channel_pipeline.rs  mod.rs  naive_spawn.rs  rayon_bridge.rs  semaphore_bounded.rs  spawn_blocking_joinset.rs  std_thread.rs  stream_buffered.rs  stream_throttled.rs
src/domain/: american_option.rs  autocallable.rs  market_data.rs  mod.rs  product.rs  propagator.rs  time_grid.rs
src/engine/: batch_runner.rs  mod.rs  monte_carlo.rs
src/simulation/: brownian_bridge.rs  mod.rs  one_step_survival.rs  path_state.rs  random.rs
