[package]
name    = "hsbc-monte-carlo-auto-callable"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rayon        = "1"
futures      = { version = "0.3", default-features = false, features = ["std"] }
rand         = "0.8"
statrs       = "0.17"
thiserror    = "1"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto       = "fat"
codegen-units = 1
