[package]
name    = "hsbc-monte-carlo-auto-callable"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1",    features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rayon        = "1"
futures      = { version = "0.3", default-features = false, features = ["std"] }
rand         = "0.8"
statrs       = "0.17"
thiserror    = "1"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto       = "fat"
codegen-units = 1

# tokio-console profile: fast enough for realistic timings, but deliberately
# avoids fat-LTO and single-CGU so that tokio's instrumentation hooks survive
# the linker.  Use this instead of --release when observing with tokio-console.
#
#   cargo run --profile console -- --npaths 50_000_000 s2
#
[profile.console]
inherits      = "release"
opt-level     = 2          # slightly less aggressive — keeps more debug hooks
lto           = "thin"     # thin LTO still inlines across crates but preserves stubs
codegen-units = 16         # multiple CGUs → tokio's __tokio_task_id stubs are not elided
debug         = 1          # line numbers → meaningful stack traces in the TUI
