[package]
name        = "hsbc-monte-carlo-auto-callable"
version     = "0.1.0"
edition     = "2021"
default-run = "hsbc-monte-carlo-auto-callable"

[dependencies]
tokio        = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rayon        = "1"
futures      = { version = "0.3", default-features = false, features = ["std"] }
rand         = "0.8"
statrs       = "0.17"
thiserror    = "1"
anyhow       = "1"
ratatui            = "0.29"
crossterm          = "0.28"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }

[[bin]]
name = "profiler"
path = "src/bin/profiler.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto       = "fat"
codegen-units = 1

# samply profile: full release optimisations + debug symbols for readable stack frames.
#
#   samply record cargo run --profile samply -- --npaths 2_000_000 s3
#
[profile.samply]
inherits      = "release"
debug         = 1          # DWARF line numbers → function names in Firefox Profiler
